force-app/main/default/objects/Opportunity/fields/PMX_Lift__c.field-meta.xml
<CustomField>
    <fullName>PMX_Lift__c</fullName>
    <label>PMX Lift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>