force-app/main/default/objects/Opportunity/fields/Primary_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Agency_Name__c</fullName>
    <formula>Agency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Agency Name</label>
    <type>Text</type>
</CustomField>