force-app/main/default/objects/Opportunity/fields/Primary_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Billing_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Primary Billing Contact)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>