force-app/main/default/objects/Opportunity/fields/Primary_KPI__c.field-meta.xml
<CustomField>
    <fullName>Primary_KPI__c</fullName>
    <label>Primary KPI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>App Engagement</fullName>
            </value>
            <value>
                <fullName>App Engagement - App Launches</fullName>
            </value>
            <value>
                <fullName>Awareness/Unique Reach</fullName>
            </value>
            <value>
                <fullName>CTR</fullName>
            </value>
            <value>
                <fullName>Delivery In Full</fullName>
            </value>
            <value>
                <fullName>Delivery in Full - Evenly Pacing</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Frequency</fullName>
            </value>
            <value>
                <fullName>In Geo</fullName>
            </value>
            <value>
                <fullName>Tune in (show/movie)</fullName>
            </value>
            <value>
                <fullName>VCR</fullName>
            </value>
            <value>
                <fullName>Viewability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>