force-app/main/default/objects/Opportunity/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label># Products</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>