force-app/main/default/objects/Opportunity/fields/Secondary_Agency__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select any other Agency this Opp is related to. Note that the invoices will be generated for the Primary Agency only.</inlineHelpText>
    <label>Agency of Record</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Agency</value>
        </filterItems>
        <infoMessage>Please select an Agency</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Secondary Agency)</relationshipLabel>
    <relationshipName>Secondary_Agencies</relationshipName>
    <type>Lookup</type>
</CustomField>