force-app/main/default/objects/Opportunity/fields/Secondary_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Billing_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Secondary Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Secondary Billing Contact)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>