force-app/main/default/objects/Opportunity/fields/Seller_Region__c.field-meta.xml
<CustomField>
    <fullName>Seller_Region__c</fullName>
    <label>Business Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>default</fullName>
            </value>
            <value>
                <fullName>General Market East</fullName>
            </value>
            <value>
                <fullName>General Market West</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>National Media &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Political</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>