force-app/main/default/objects/Opportunity/fields/Skip_Validations__c.field-meta.xml
<CustomField>
    <fullName>Skip_Validations__c</fullName>
    <formula>RecordType.DeveloperName = &quot;Parent_Opportunity&quot; ||  NOT($Setup.Trigger_Settings__c.Opportunity_Triggers_Active__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skip Validations</label>
    <type>Checkbox</type>
</CustomField>