force-app/main/default/objects/Opportunity/fields/TechOps__c.field-meta.xml
<CustomField>
    <fullName>TechOps__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TechOps</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>