force-app/main/default/objects/Opportunity/fields/Tertiary_Agency__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select any other Agency this Opp is related to. Note that invoices will be generated for the Primary Agency only.</inlineHelpText>
    <label>Tertiary Agency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Agency</value>
        </filterItems>
        <infoMessage>Please select an agency</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Tertiary Agency)</relationshipLabel>
    <relationshipName>Tertiary_Agencies</relationshipName>
    <type>Lookup</type>
</CustomField>