force-app/main/default/objects/Opportunity/fields/Third_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Third_Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Third Billing Contact)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>