force-app/main/default/objects/Opportunity/fields/Total_Booking_Amount_Net__c.field-meta.xml
<CustomField>
    <fullName>Total_Booking_Amount_Net__c</fullName>
    <label>Total Booking Amount (Net)</label>
    <summarizedField>OpportunityLineItem.Total_Booking_Amount_Net__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>