force-app/main/default/objects/Opportunity/fields/Total_Commited_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Commited_Amount__c</fullName>
    <label>Total Commited Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>