force-app/main/default/objects/Opportunity/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <formula>CloseDate - MOD(CloseDate - DATE(1900, 1, 7), 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week</label>
    <type>Date</type>
</CustomField>