force-app/main/default/objects/Opportunity/fields/Week_Name__c.field-meta.xml
<CustomField>
    <fullName>Week_Name__c</fullName>
    <formula>(&quot;Week &quot;)+TEXT(Week_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Name</label>
    <type>Text</type>
</CustomField>