force-app/main/default/objects/Opportunity/fields/Week_Number__c.field-meta.xml
<CustomField>
    <fullName>Week_Number__c</fullName>
    <formula>IF( 
  CEILING( ( CloseDate - DATE( YEAR( CloseDate ), 1, 1) + 1) / 7) &gt; 52,
  52,
  CEILING( ( CloseDate - DATE( YEAR( CloseDate ), 1, 1) + 1) / 7)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>