force-app/main/default/objects/Opportunity/fields/X3P_Verification_Partner__c.field-meta.xml
<CustomField>
    <fullName>X3P_Verification_Partner__c</fullName>
    <label>3P Verification Partner</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Third Party Verification Required</fullName>
                <default>true</default>
                <label>No Third Party Verification Required</label>
            </value>
            <value>
                <fullName>Doubleverify : Brand Safety</fullName>
            </value>
            <value>
                <fullName>Doubleverify : Brand Suitability</fullName>
            </value>
            <value>
                <fullName>Doubleverify : Fraud</fullName>
            </value>
            <value>
                <fullName>Doubleverify : Viewability</fullName>
            </value>
            <value>
                <fullName>Doubleverify : Impressions</fullName>
            </value>
            <value>
                <fullName>DoubleVerify - Out of Geo</fullName>
            </value>
            <value>
                <fullName>IAS : Brand Safety</fullName>
            </value>
            <value>
                <fullName>IAS : Brand Suitability</fullName>
            </value>
            <value>
                <fullName>IAS : Fraud</fullName>
            </value>
            <value>
                <fullName>IAS : Viewability</fullName>
            </value>
            <value>
                <fullName>IAS : Impressions</fullName>
            </value>
            <value>
                <fullName>IAS - Out of Geo</fullName>
            </value>
            <value>
                <fullName>MOAT - Brand Safety</fullName>
            </value>
            <value>
                <fullName>MOAT - Brand Suitability</fullName>
            </value>
            <value>
                <fullName>MOAT - Fraud</fullName>
            </value>
            <value>
                <fullName>MOAT - Viewability</fullName>
            </value>
            <value>
                <fullName>MOAT - Impressions</fullName>
            </value>
            <value>
                <fullName>MOAT - Out of Geo</fullName>
            </value>
            <value>
                <fullName>Innovid : Brand Safety</fullName>
                <isActive>false</isActive>
                <label>Innovid : Brand Safety</label>
            </value>
            <value>
                <fullName>Innovid : Brand Suitability</fullName>
                <isActive>false</isActive>
                <label>Innovid : Brand Suitability</label>
            </value>
            <value>
                <fullName>Innovid : Fraud</fullName>
                <isActive>false</isActive>
                <label>Innovid : Fraud</label>
            </value>
            <value>
                <fullName>Innovid : Impressions</fullName>
                <isActive>false</isActive>
                <label>Innovid : Impressions</label>
            </value>
            <value>
                <fullName>Innovid : Viewability</fullName>
                <isActive>false</isActive>
                <label>Innovid : Viewability</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>