force-app/main/default/objects/Opportunity/recordTypes/One_Managed_Service.recordType-meta.xml
<RecordType>
    <fullName>One_Managed_Service</fullName>
    <active>true</active>
    <businessProcess>Managed Service Process</businessProcess>
    <label>1-Managed Service</label>
</RecordType>