force-app/main/default/objects/Opportunity/recordTypes/Parent_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Parent_Opportunity</fullName>
    <active>true</active>
    <businessProcess>For Parent Opportunity</businessProcess>
    <label>Parent Opportunity</label>
</RecordType>