force-app/main/default/objects/Opportunity/recordTypes/Self_Service.recordType-meta.xml
<RecordType>
    <fullName>Self_Service</fullName>
    <active>true</active>
    <businessProcess>Self Service</businessProcess>
    <label>2-Self Service</label>
</RecordType>