force-app/main/default/objects/Opportunity/recordTypes/Three_Corporate.recordType-meta.xml
<RecordType>
    <fullName>Three_Corporate</fullName>
    <active>true</active>
    <businessProcess>Corporate</businessProcess>
    <label>3-Corporate</label>
</RecordType>