force-app/main/default/objects/Opportunity/validationRules/AM_name_mandatory_on_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>AM_name_mandatory_on_Closed_Won</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &apos;Waiting on Assets - Closed Won&apos;) || ISPICKVAL(StageName, &apos;Closed Won&apos;),
    ISBLANK(CSM__c),
    NOT(Skip_Validations__c)
)</errorConditionFormula>
    <errorDisplayField>CSM__c</errorDisplayField>
    <errorMessage>Please enter the AM before marking the opp Won</errorMessage>
</ValidationRule>