force-app/main/default/objects/Opportunity/validationRules/Billing_Contact_on_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Contact_on_Closed_Won</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(StageName), ISPICKVAL(StageName, &apos;Closed Won&apos;), ISBLANK(Primary_Billing_Contact__c), NOT(ChekParentRecordType__c ))</errorConditionFormula>
    <errorDisplayField>Primary_Billing_Contact__c</errorDisplayField>
    <errorMessage>Please fill Primary Billing Contact.</errorMessage>
</ValidationRule>