force-app/main/default/objects/Opportunity/validationRules/Block_Opportunity_Creation_Or_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Opportunity_Creation_Or_Update</fullName>
    <active>true</active>
    <description>Block opportunity creating during account approval.</description>
    <errorConditionFormula>AND(
    NOT(Skip_Validations__c),
    OR(
        ISPICKVAL(Account.Account_Review_Status__c, &apos;In Review&apos;),
        ISPICKVAL(Account.Account_Review_Status__c, &apos;Rejected&apos;),
        ISPICKVAL(Agency__r.Account_Review_Status__c, &apos;In Review&apos;),
        ISPICKVAL(Agency__r.Account_Review_Status__c, &apos;Rejected&apos;)
    )
)</errorConditionFormula>
    <errorMessage>Cannot create or update an opportunity against a non approved account.</errorMessage>
</ValidationRule>