force-app/main/default/objects/Opportunity/validationRules/Campaign_Name_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_Name_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(Campaign_Name__c),
Probability &gt;= 0.25,
DATEVALUE(CreatedDate) &gt; DATEVALUE($Label.Opp_validation_effective_Date),
NOT(Skip_Validations__c)
)</errorConditionFormula>
    <errorDisplayField>Campaign_Name__c</errorDisplayField>
    <errorMessage>Campaign Name is a mandatory field at RFP Received and later stages</errorMessage>
</ValidationRule>