force-app/main/default/objects/Opportunity/validationRules/CheckOppProbaility.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckOppProbaility</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
Probability &gt; 0.25,
NOT(Skip_Validations__c)
)</errorConditionFormula>
    <errorMessage>Probability must be 25% or lower when creating and opportunity</errorMessage>
</ValidationRule>