force-app/main/default/objects/Opportunity/validationRules/Currency_Change_After_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Currency_Change_After_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED( CurrencyIsoCode ) , has_been_closed__c, $Profile.Name &lt;&gt; &quot;System Administrator&quot; )</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Currency cannot be changed if the Opportunity has been closed once</errorMessage>
</ValidationRule>