force-app/main/default/objects/Opportunity/validationRules/DropBox_Url_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>DropBox_Url_Validation</fullName>
    <active>true</active>
    <description>Please ensure that the &apos;Dropbox URL&apos; field is filled in and begins with &apos;http://&apos; or &apos;https://&apos; to be valid.</description>
    <errorConditionFormula>NOT(
    OR(
        BEGINS(Dropbox_URL__c, &quot;http://&quot;),
        BEGINS(Dropbox_URL__c, &quot;https://&quot;),
ISBLANK(Dropbox_URL__c)
    )
)</errorConditionFormula>
    <errorMessage>Please ensure that the &apos;Dropbox URL&apos; field is filled in and begins with &apos;http://&apos; or &apos;https://&apos; to be valid.</errorMessage>
</ValidationRule>