force-app/main/default/objects/Opportunity/validationRules/Due_date_required_at_proposal_req_parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_date_required_at_proposal_req_parent</fullName>
    <active>true</active>
    <errorConditionFormula>AND($RecordType.DeveloperName = &quot;Parent_Opportunity&quot;,
    ISPICKVAL(StageName, &quot;Proposal Requested&quot;),

    ISBLANK(Due_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Due Date is required when the Opportunity stage is set to &apos;Proposal Requested</errorMessage>
</ValidationRule>