force-app/main/default/objects/Opportunity/validationRules/End_Date_on_Self_Service_Estimate.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_on_Self_Service_Estimate</fullName>
    <active>true</active>
    <description>For Self Service opps, if user enters an estimated booking amount, they must enter flight dates</description>
    <errorConditionFormula>Pricebook2.Name = &apos;Self Service&apos; &amp;&amp; NOT(ISBLANK(Estimated_Booking_Amount__c)) &amp;&amp; Estimated_Booking_Amount__c &gt; 0 &amp;&amp; 
ISBLANK(Flight_End_Date__c)</errorConditionFormula>
    <errorDisplayField>Flight_End_Date__c</errorDisplayField>
    <errorMessage>Flight End date must be selected for Self Service Opportunities if Estimated Booking Amount is entered.</errorMessage>
</ValidationRule>