force-app/main/default/objects/Opportunity/validationRules/Fifth_Billing_Contact_Email_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Fifth_Billing_Contact_Email_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Fifth_Billing_Contact__c)),
  ISBLANK(Fifth_Billing_Contact__r.Email),
NOT(Skip_Validations__c)
)</errorConditionFormula>
    <errorDisplayField>Fifth_Billing_Contact__c</errorDisplayField>
    <errorMessage>Billing Contact has no email address set</errorMessage>
</ValidationRule>