force-app/main/default/objects/Opportunity/validationRules/For_Original_Booking_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>For_Original_Booking_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(StageName, &apos;Waiting on Assets - Closed Won&apos;),
        ISPICKVAL(StageName, &apos;Closed Won&apos;)
    ),
    ISBLANK( Original_Booking_Amount__c ),
DATEVALUE(CreatedDate) &gt; DATEVALUE($Label.Opp_validation_effective_Date),
NOT(Skip_Validations__c) 
)</errorConditionFormula>
    <errorDisplayField>Original_Booking_Amount__c</errorDisplayField>
    <errorMessage>Original Booking Amount is required at the Closed Won stages</errorMessage>
</ValidationRule>