force-app/main/default/objects/Opportunity/validationRules/For_Parent_Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>For_Parent_Opp</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $RecordType.DeveloperName = &apos;Parent_Opportunity&apos;,
    ISBLANK(Account_Name__c),
    ISBLANK(Agency__c),
    ISBLANK(Holding_Company__c)

  
)</errorConditionFormula>
    <errorMessage>Enter at least one of the following fields: Account Name, Primary Agency, or Holding Company for Parent Opportunity record type.</errorMessage>
</ValidationRule>