force-app/main/default/objects/Opportunity/validationRules/For_Primary_and_Secondary_KPI.validationRule-meta.xml
<ValidationRule>
    <fullName>For_Primary_and_Secondary_KPI</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISPICKVAL(StageName, &quot;Proposal Submitted&quot;),
ISPICKVAL(StageName, &quot;Negotiation&quot;),
ISPICKVAL(StageName, &quot;Verbal Confirm&quot;),
ISPICKVAL(StageName, &quot;Notification&quot;),
ISPICKVAL(StageName, &quot;Waiting on Assets - Closed Won&quot;),
ISPICKVAL(StageName, &quot;Closed Won&quot;),
ISPICKVAL(StageName, &quot;Closed Lost&quot;)
),
OR(
ISBLANK(TEXT(Primary_KPI__c)),
ISBLANK(TEXT(Secondary_KPI__c))
),
NOT(Skip_Validations__c),
DATEVALUE(CreatedDate) &gt; DATEVALUE($Label.Opp_validation_effective_Date)
)</errorConditionFormula>
    <errorMessage>The &apos;Primary KPI&apos; and &apos;Secondary KPI&apos; fields are required at the &apos;Proposal Submitted&apos; stage and Later.</errorMessage>
</ValidationRule>