force-app/main/default/objects/Opportunity/validationRules/For_proposal_submitted_parent_opp.validationRule-meta.xml
<ValidationRule>
    <fullName>For_proposal_submitted_parent_opp</fullName>
    <active>true</active>
    <errorConditionFormula>AND($RecordType.DeveloperName = &quot;Parent_Opportunity&quot;,
    ISPICKVAL(StageName, &quot;Proposal Submitted&quot;),
  

    OR(
        ISBLANK( Amount ),
        ISBLANK( Contract_Start__c ),
        ISBLANK( Contract_End__c )
    )
)</errorConditionFormula>
    <errorMessage>When the Opportunity stage is &apos;Proposal Submitted&apos;, the following fields are required: Total Booking Amount, Contract Start Date, and Contract End Date.</errorMessage>
</ValidationRule>