force-app/main/default/objects/Opportunity/validationRules/IO_Number_required_if_available.validationRule-meta.xml
<ValidationRule>
    <fullName>IO_Number_required_if_available</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( ISPICKVAL(IO_Number_Available__c, &apos;Not Available&apos;)) &amp;&amp; ISBLANK(IO_Number__c)</errorConditionFormula>
    <errorDisplayField>IO_Number__c</errorDisplayField>
    <errorMessage>Please enter the IO Number or pick Not Available in IO Number Available list</errorMessage>
</ValidationRule>