force-app/main/default/objects/Opportunity/validationRules/KPI_note_on_closed_won.validationRule-meta.xml
<ValidationRule>
    <fullName>KPI_note_on_closed_won</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(StageName, &quot;Waiting on Assets - Closed Won&quot;),
        ISPICKVAL(StageName, &quot;Closed Won&quot;)
    ),
     ISBLANK(KPI_Note__c) ,
DATEVALUE(CreatedDate) &gt; DATEVALUE($Label.Opp_validation_effective_Date),
 NOT(Skip_Validations__c)
)</errorConditionFormula>
    <errorMessage>KPI Note is required for Opportunities at the &apos;Waiting for Assets-Closed Won   &apos; or &apos;Closed Won&apos; stage.</errorMessage>
</ValidationRule>