force-app/main/default/objects/Opportunity/validationRules/Loss_Reason_Other_Additional_Information.validationRule-meta.xml
<ValidationRule>
    <fullName>Loss_Reason_Other_Additional_Information</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Loss_Reason__c, &quot;Other&quot;),
    ISBLANK(Other_Loss_Reason__c),
    NOT(Skip_Validations__c)
)</errorConditionFormula>
    <errorDisplayField>Other_Loss_Reason__c</errorDisplayField>
    <errorMessage>You must provide more detail for a Loss Reason &quot;Other&quot;.</errorMessage>
</ValidationRule>