force-app/main/default/objects/Opportunity/validationRules/Main_Point_Of_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Main_Point_Of_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(Main_Point_Of_Contact_Primary__c),
Probability &gt;= 0.90,
DATEVALUE(CreatedDate) &gt; DATEVALUE(&apos;2024-05-19&apos;),
NOT(Skip_Validations__c)
)</errorConditionFormula>
    <errorDisplayField>Main_Point_Of_Contact_Primary__c</errorDisplayField>
    <errorMessage>Main Point of Contact is required at Verbal Confirm stage and later stages</errorMessage>
</ValidationRule>