force-app/main/default/objects/Opportunity/validationRules/Main_Point_Of_Contact_Primary.validationRule-meta.xml
<ValidationRule>
    <fullName>Main_Point_Of_Contact_Primary</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(StageName), ISPICKVAL(StageName, &apos;Closed Won&apos;), ISBLANK(Main_Point_Of_Contact_Primary__c))</errorConditionFormula>
    <errorDisplayField>Main_Point_Of_Contact_Primary__c</errorDisplayField>
    <errorMessage>Please fill the Main Point of Contact.</errorMessage>
</ValidationRule>