force-app/main/default/objects/Opportunity/validationRules/MS_with_only_Market_Type_as_GM_ME.validationRule-meta.xml
<ValidationRule>
    <fullName>MS_with_only_Market_Type_as_GM_ME</fullName>
    <active>true</active>
    <description>For MS, Market Type as Others should not be selected.</description>
    <errorConditionFormula>AND( NOT($Profile.Name = &quot;Partner Resellers Profile&quot;),
  Pricebook2.Name = &quot;Managed Service&quot; &amp;&amp; !(ISPICKVAL(Market_Type__c, &quot;M&amp;E&quot;) || ISPICKVAL(Market_Type__c, &quot;GM&quot;)),
  OR(
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
    ISCHANGED(Market_Type__c)
  )
)</errorConditionFormula>
    <errorDisplayField>Market_Type__c</errorDisplayField>
    <errorMessage>For Managed Service opps, please select market type as either &quot;M&amp;E&quot; or &quot;GM&quot;</errorMessage>
</ValidationRule>